<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activites.DetailedActivity" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/activeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="99dp"
            android:layout_marginLeft="99dp"
            android:layout_marginTop="16dp"
            android:gravity="right"
            android:text="@string/daily_detail_active"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registeredTextView" />

        <TextView
            android:id="@+id/registeredTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="164dp"
            android:gravity="right"
            android:text="@string/daily_detail_registered"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/deathsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="16dp"
            android:gravity="right"
            android:text="@string/daily_detail_deaths"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activeTextView" />

        <TextView
            android:id="@+id/recoveredTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginLeft="64dp"
            android:layout_marginTop="16dp"
            android:gravity="right"
            android:text="@string/daily_detail_recovered"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/deathsTextView" />

        <TextView
            android:id="@+id/registeredNumberTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginLeft="48dp"
            android:layout_marginTop="164dp"
            android:text="NumberTextView"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/registeredTextView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/activeNumberTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginLeft="48dp"
            android:layout_marginTop="16dp"
            android:text="NumberTextView"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/activeTextView"
            app:layout_constraintTop_toBottomOf="@+id/registeredNumberTextView" />

        <TextView
            android:id="@+id/deathsNumberTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginLeft="48dp"
            android:layout_marginTop="16dp"
            android:text="NumberTextView"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/deathsTextView"
            app:layout_constraintTop_toBottomOf="@+id/activeNumberTextView" />

        <TextView
            android:id="@+id/recoveredNumberTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginLeft="48dp"
            android:layout_marginTop="16dp"
            android:text="NumberTextView"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/recoveredTextView"
            app:layout_constraintTop_toBottomOf="@+id/deathsNumberTextView" />

        <TextView
            android:id="@+id/motivationalTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="92dp"
            android:gravity="center"
            android:text="motivationalTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recoveredTextView" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
