<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activites.AboutActivity" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/rightsReservedTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="148dp"
            android:layout_marginLeft="148dp"
            android:layout_marginEnd="149dp"
            android:layout_marginRight="149dp"
            android:layout_marginBottom="187dp"
            android:text="@string/about_rights"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appVersionTextView" />

        <TextView
            android:id="@+id/appVersionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="178dp"
            android:layout_marginLeft="178dp"
            android:layout_marginTop="239dp"
            android:layout_marginEnd="178dp"
            android:layout_marginRight="178dp"
            android:text="@string/about_app_version"
            app:layout_constraintBottom_toTopOf="@+id/rightsReservedTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/thankYouTextView" />

        <TextView
            android:id="@+id/thankYouTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="65dp"
            android:layout_marginLeft="65dp"
            android:layout_marginTop="248dp"
            android:layout_marginEnd="66dp"
            android:layout_marginRight="66dp"
            android:layout_marginBottom="239dp"
            android:text="@string/about_thank_you"
            app:layout_constraintBottom_toTopOf="@+id/appVersionTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar2"
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginRight="1dp"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="151dp"
            android:layout_marginLeft="151dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="152dp"
            android:layout_marginRight="152dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toTopOf="@+id/thankYouTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar2"
            app:srcCompat="@drawable/ic_launcher_background"
            tools:ignore="VectorDrawableCompat" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="321dp"
            android:layout_marginRight="321dp"
            android:text="Button"
            app:layout_constraintBottom_toBottomOf="@+id/toolbar2"
            app:layout_constraintEnd_toEndOf="@+id/toolbar2"
            app:layout_constraintStart_toStartOf="@+id/toolbar2"
            app:layout_constraintTop_toTopOf="@+id/toolbar2"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
